typestate-proc-macro/tests/fail/duplicate_automata_attr.rs
use typestate_proc_macro::typestate;

#[typestate]
mod m {
    #[automata]
    #[automata]
    struct S {}
}

fn main() {}