typestate-proc-macro/tests/fail/duplicate_automata_attr.stderr
error: Duplicate attribute.
 --> $DIR/duplicate_automata_attr.rs:6:5
  |
6 |     #[automata]
  |     ^^^^^^^^^^^
